fix dark mode styles

--- a/assets/styles/dark.css
+++ b/assets/styles/dark.css
@@ -7,6 +7,7 @@ footer.footer {
     transition: background-color .3s ease, color .3s ease;
 }
 
+
 /* typography */
 
 body.color-theme-dark {
@@ -20,12 +21,12 @@ body.color-theme-dark {
     color: #dedede;
 }
 
-
 .color-theme-dark h1,
 .color-theme-dark .page-title,
 .color-theme-dark .post-title {
     color: #29a6dc;
 }
+
 
 /* layout */
 
@@ -88,6 +89,11 @@ body.color-theme-dark {
     box-shadow: none
 }
 
+.color-theme-dark .btn-icon img {
+    border: none;
+    box-shadow: none;
+}
+
 .color-theme-dark ins {
     color: white;
     background: #195027;
@@ -98,6 +104,16 @@ body.color-theme-dark {
     color: white;
     background: #635b00;
     border: 1px solid #504a00;
+}
+
+.color-theme-dark td>mark {
+    box-shadow: 0 0 0 250px #635b00;
+    border: none;
+}
+
+.color-theme-dark td>ins {
+    box-shadow: 0 0 0 250px #195027;
+    border: none;
 }
 
 .color-theme-dark blockquote {
@@ -118,6 +134,7 @@ body.color-theme-dark {
     border: 1px solid #858585;
     box-shadow: none;
 }
+
 
 /* table */
 
@@ -142,6 +159,7 @@ body.color-theme-dark {
 .color-theme-dark .footer a {
     background-image: linear-gradient(transparent 0, transparent calc(50% - 8px), hsla(198, 100%, 37%, .3) calc(50% - 8px), hsla(198, 100%, 37%, .3) 100%);
 }
+
 
 /* search results */
 
@@ -175,7 +193,9 @@ body.color-theme-dark {
     color: white;
 }
 
+
 /* badges */
+
 .color-theme-dark .content .tag-badge {
     border: 1px solid #688fa0;
     background: #313132;
@@ -185,7 +205,6 @@ body.color-theme-dark {
 .color-theme-dark .content .tag-badge:hover {
     background: #2e2e2f;
 }
-
 
 .color-theme-dark .content span.tag-badge {
     /* unclickable */
@@ -205,7 +224,36 @@ body.color-theme-dark {
     color: #b7b7b7;
 }
 
+
+/* post list */
+
+.color-theme-dark .post a {
+    background-image: none;
+}
+
+.color-theme-dark .post a:hover {
+    background: rgba(62, 73, 77, 0.2)
+}
+
+.color-theme-dark .post .post-title {
+    color: #e5f4fa;
+}
+
+.color-theme-dark .post a .post-title {
+    background-image: linear-gradient(transparent 0, transparent calc(50% - 8px), hsla(198, 100%, 37%, .2) calc(50% - 8px), hsla(198, 100%, 37%, .2) 100%);
+}
+
+.color-theme-dark .post a:hover .post-title {
+    background-image: linear-gradient(transparent 0, transparent calc(50% - 8px), hsla(198, 100%, 37%, .4) calc(50% - 8px), hsla(198, 100%, 37%, .4) 100%);
+}
+
+.color-theme-dark .post a .post-title:hover {
+    background-image: linear-gradient(transparent 0, transparent calc(50% - 8px), hsla(198, 100%, 37%, .4) calc(50% - 8px), hsla(198, 100%, 37%, .4) 100%);
+}
+
+
 /* settings */
+
 .color-theme-dark .themes :checked+span {
     background: #3e527d;
     border-left: 2px solid #2565f9;
@@ -216,13 +264,14 @@ body.color-theme-dark {
 }
 
 
-
 /* alerts */
+
 .color-theme-dark .alert.alert-warn {
     background: #593a00;
     border: 1px solid #7e5100;
     color: #faf9f7;
 }
+
 .color-theme-dark .alert.alert-warn a {
     color: #faf9f7;
 }
@@ -235,6 +284,7 @@ body.color-theme-dark {
 .color-theme-dark .alert.alert-warn a:hover {
     background-image: linear-gradient(transparent 0, transparent calc(50% - 4px), #704f01 calc(50% - 8px), #704f01 100%);
 }
+
 
 /* tweets */
 
@@ -283,4 +333,3 @@ body.color-theme-dark {
 .color-theme-dark .tweet-footer .tweet-like:hover {
     color: #e0245e;
 }
-
